k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grimoire
  labels:
    app: grimoire
